# FundingRateAnalysis

./: api_data.py  binance_btc_funding_rates_2023_2024.csv  common_dse.py  funding_rate_analysis.py  nb_load_data.ipynb  nb_plot_heatmap.ipynb  nb_plot_hodl.ipynb  nb_plot_hodl_corr.ipynb  nb_plot_hodl_funding.ipynb  nb_plot_market_size_impact.ipynb  nb_plot_return.ipynb  np_plot_lev_bar.ipynb  pyproject.toml
data/: apollox_BNBUSDT.csv  apollox_BTCUSDT.csv  apollox_ETHUSDT.csv  apollox_SOLUSDT.csv  apollox_XRPUSDT.csv  binance_BNBUSDT.csv  binance_BTCUSDT.csv  binance_ETHUSDT.csv  binance_SOLUSDT.csv  binance_XRPUSDT.csv  bitmex_BNBUSD.csv  bitmex_BNBUSDT.csv  bitmex_ETHUSD.csv  bitmex_ETHUSDT.csv  bitmex_SOLUSD.csv  bitmex_SOLUSDT.csv  bitmex_XBTUSD.csv  bitmex_XBTUSDT.csv  bitmex_XRPUSD.csv  bitmex_XRPUSDT.csv  drift_BNB-PERP.csv  drift_BTC-PERP.csv  drift_ETH-PERP.csv  drift_SOL-PERP.csv  drift_XRP-PERP.csv
data_manual/: eth_funding_rates_7days.csv
funding_rate_data/: apollox_btc_funding_rates_2023_2024.csv  bitmex_btc_funding_rates_2023_2024.csv  drift_btc_funding_rates_2023_2024.csv
modules/: fetcher.py
modules/exchanges/: apollox.py  binance.py  bitmex.py  drift.py  dydx.py  gate.py  huobi.py  hyperliquid.py  kwenta.py  (+3 more)
output/: apollox_BTCUSDT_results.csv  apollox_XRPUSDT_results.csv  binance_BTCUSDT_results.csv  binance_BTCUSDT_results_04to-09.xlsx  binance_BTCUSDT_results_raw.xlsx  binance_XRPUSDT_results.csv  bitmex_XBTUSD_results.csv  bitmex_XRPUSD_results.csv  corr_XRP.csv  drift_BTC-PERP_results.csv  drift_XRP-PERP_results.csv  leverage_bar_SOL.json
